clean all  catch

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:+W4Cgs0gl1a4McLFIVs0tPuYwHawPkQO0Z8Zr5w4zS0=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://192.168.1.113:8000
 
 LOG_CHANNEL=stack
 
